--- a/style.css
+++ b/style.css
@@ -791,7 +791,7 @@ main .recent-transactions .card-details .card {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 1, 0.5);
-  max-width: 90vw;
+  width: 100%;
   height: 100vh;
   display: grid;
   align-items: flex-end;
